Fixed whitespace on right, responsive roughly done.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -459,18 +459,9 @@ button:active {
     flex-direction: column;
     align-items: center;
     align-content: center;
-}
-
-.service header h1 {
-    font-size: 6rem;
-    font-weight: 800;
-}
-
-.service header {
     text-align: center;
     margin: 0 auto;
 }
-
 .service header h1 {
     font-size: 700;
     font-family: Roboto;
@@ -480,10 +471,6 @@ button:active {
 .service header h3 {
     font-size: 2rem;
     font-weight: 600;
-}
-
-.service header span {
-    font-weight: 900;
 }
 
 /* SERVICE HEADER STOPS */
@@ -555,7 +542,7 @@ button:active {
 @media only screen and (max-width: 578px) {
     #service-info-left {
         padding: 0.6rem 0.4rem;
-        margin: 0 5px;
+        margin: 0 3px;
     }
     
     .quote {
@@ -638,17 +625,32 @@ button:active {
 }
 
 @media only screen and (max-width: 660px) {
+    .service header h1 {
+        font-size: 3.5rem;
+    }
+    .service header h3 {
+        font-size: 1.3rem;
+    }
+    .quote p {
+        display: none;
+        position: absolute;
+    }
+    
+    #service-info-left p {
+        font-size: 1.1rem;  
+    }
+    
     #service-info-right h1 {
         font-size: 3rem;   
     }
 
     #service-info-right li {
-        font-size: 1.7rem;
+        font-size: 1.3rem;
         width: 70%;
     }
 
     #service-info-right span {
-        font-size: 1.5rem;
+        font-size: 1.1rem;
     }
 }
 
@@ -833,6 +835,19 @@ hr {
     }
 }
 
+@media only screen and (max-width: 660px) { 
+    .portfolio h1 {
+        font-size: 3.5rem;
+        margin-bottom: 5px;
+    }   
+    .portfolio-box p {
+        font-size: 1.1rem;
+    }
+    #portfolio-info p {
+        padding: .3% .5%;
+    }
+}
+
 
 
 /* CONTACT PAGE */
@@ -906,6 +921,12 @@ input[type=text], select, textarea {
     background-color: green;
     padding: 10px;
     margin-top: 25px;
+}
+
+@media only screen and (max-width: 660px) {
+    .contact header h1 {
+        font-size: 3.5rem;
+    }
 }
 
 
